--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "lodash": "^4.17.21",
     "moment": "^2.30.1",
     "moment-timezone": "^0.5.45",
+    "mongodb": "^6.8.0",
     "morgan": "^1.10.0",
     "nunjucks": "^3.2.4"
   },
